syntax = "proto3";

option go_package = "./netapi";

package main;

service TaskService {
    rpc CommitTask (CommitTaskReq) returns (CommitTaskResp);
    rpc GetTask (GetTaskReq) returns (GetTaskResp);
}

message BaseInfo {
    string wd = 1;
}

message Task {
    BaseInfo info = 1;
    string name = 2;
    string command = 3;

    uint64 id = 4;

    string status = 5;

    string commitTime = 6;
    string startTime = 7;
    string stopTime = 8;
}

message CommitTaskReq {
    Task task = 1;
}

message CommitTaskResp {
    string message = 1;
}

message GetTaskReq {
    BaseInfo info = 1;
    string name = 2;
    uint64 taskId = 3;
}

message GetTaskResp {
    repeated Task tasks = 1;
}